<resources>
    <string name="app_name">Tapple</string>
    <string name="title_activity_main_menu">Home</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_students">Students</string>
    <string name="title_activity_register">Register</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_student_profile">StudentProfile</string>

    <string name="titlulo_pickers">Obtener fecha y hora</string>
    <string name="formato_fecha">yyyy-mm-dd</string>
    <string name="formato_hora">hh:mm</string>

    <string name="instructions">Place your fingertip on the Home button to verify your identity</string>
    <string name="title_activity_student_location">Map</string>
    <string name="title_activity_meeting_list">MeetingList</string>
    <string name="nCita">New appointment</string>
    <string name="money">Money</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="add">Add</string>
    <string name="sData">Student data</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone">Phone</string>
    <string name="nPass">Enter new password</string>
    <string name="password">Password</string>
    <string name="rPass">Repeat password</string>
    <string name="send">Send</string>
    <string name="change">Change</string>
    <string name="recPass">Enter your username and your security answer</string>
    <string name="user">User</string>
    <string name="sAnswer">Answer</string>
    <string name="forPass">Forgotten password</string>
    <string name="singUp">Sing up</string>
    <string name="home">Home</string>
    <string name="students">Students</string>
    <string name="meetings">Meetings</string>
    <string name="seetings">Seetings</string>
    <string name="persData">Personal Data</string>
    <string name="signData">Sign in data</string>
    <string name="havePass">You have a password</string>
    <string name="welcome">Welcome</string>

    <string-array name="boolean_Spinner">
        <item>-- None --</item>
        <item>false</item>
        <item>true</item>
    </string-array>
<<<<<<< HEAD
    <string name="bday">Birthday</string>
    <string name="profile">Profile</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="showOnMaps">Show on Maps</string>
=======
    <string name="title_activity_meet_details">MeetDetails</string>
>>>>>>> 22c2d50409b4fe83d3a2db6f60ade72e64d835ba

</resources>
