<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"

    xmlns:android="http://schemas.android.com/apk/res/android">

    <ProgressBar
        android:id="@+id/pb_register"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

    <ScrollView xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginBottom="60dp"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            tools:context=".LoginActivity" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/persData"
                android:contentDescription="@string/persData"
                android:textSize="25sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginBottom="15dp"
                android:background="@android:color/darker_gray"/>

            <EditText
                android:id="@+id/edt_dni"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:inputType="text"
                android:hint="DNI"
                android:contentDescription="DNI"
                android:layout_marginBottom="5dp"
                tools:layout_editor_absoluteX="68dp"
                tools:layout_editor_absoluteY="85dp" />

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                android:hint="@string/name"
                android:contentDescription="@string/name"
                tools:layout_editor_absoluteX="68dp"
                tools:layout_editor_absoluteY="85dp" />

            <EditText
                android:id="@+id/edt_surname1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                android:hint="@string/surname"
                android:contentDescription="@string/surname"
                tools:layout_editor_absoluteX="68dp"
                tools:layout_editor_absoluteY="85dp" />

            <EditText
                android:id="@+id/edt_surname2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                android:hint="@string/surname"
                android:contentDescription="@string/surname"
                tools:layout_editor_absoluteX="68dp"
                tools:layout_editor_absoluteY="85dp" />

            <TextView
                android:id="@+id/txt_birthday"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:text="@string/bday"
                android:contentDescription="@string/bday"
                tools:layout_editor_absoluteX="15dp"
                tools:layout_editor_absoluteY="16dp" />

            <EditText
                android:id="@+id/mostrar_fecha"
                android:layout_width="match_parent"
                android:focusable="false"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/formato_fecha"/>

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:layout_marginBottom="10dp"
                android:inputType="textEmailAddress"
                android:hint="e-Mail"
                android:contentDescription="MAIL"
                tools:layout_editor_absoluteX="68dp"
                tools:layout_editor_absoluteY="85dp" />

            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:layout_marginBottom="10dp"
                android:inputType="phone"
                android:hint="@string/phone"
                android:contentDescription="@string/phone"
                tools:layout_editor_absoluteX="68dp"
                tools:layout_editor_absoluteY="85dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/signData"
                android:contentDescription="@string/signData"
                android:textSize="25sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginBottom="15dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/txt_user"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/user"
                android:contentDescription="@string/user"
                android:layout_marginBottom="10dp"
                tools:layout_editor_absoluteX="15dp"
                tools:layout_editor_absoluteY="16dp" />

            <EditText
                android:id="@+id/edt_user"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                android:hint="@string/user"
                android:contentDescription="@string/user"
                tools:layout_editor_absoluteX="68dp"
                tools:layout_editor_absoluteY="85dp" />

            <TextView
                android:id="@+id/txt_pass"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/password"
                android:contentDescription="@string/password"
                android:layout_marginBottom="5dp"
                tools:layout_editor_absoluteX="15dp"
                tools:layout_editor_absoluteY="16dp" />

            <EditText
                android:id="@+id/edt_pass"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:contentDescription="@string/password"
                tools:layout_editor_absoluteX="68dp"
                tools:layout_editor_absoluteY="85dp" />

            <EditText
                android:id="@+id/edt_pass2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword"
                android:hint="@string/rPass"
                android:contentDescription="@string/rPass"
                tools:layout_editor_absoluteX="68dp"
                tools:layout_editor_absoluteY="85dp" />

            <EditText
                android:id="@+id/edt_answer"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                android:hint="@string/sAnswer"
                android:contentDescription="@string/sAnswer"
                tools:layout_editor_absoluteX="68dp"
                tools:layout_editor_absoluteY="85dp" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:background="@color/colorPrimary"
                android:text="@string/singUp"
                android:contentDescription="@string/singUp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/txt_register"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:onClick="goRegister"
                android:text="@string/havePass"
                android:contentDescription="@string/havePass"
                android:textColor="#2a4779"
                android:textStyle="italic" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>