<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ProgressBar
        android:id="@+id/pb_register"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

    <ScrollView xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        android:layout_width="match_parent"

        xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            tools:context=".LoginActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/sData"
                android:contentDescription="@string/sData"
                android:textSize="25sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginBottom="15dp"
                android:background="@android:color/darker_gray" />

            <EditText
                android:id="@+id/edt_dni"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:hint="DNI"
                android:maxLength="30"
                android:inputType="text"
                tools:layout_editor_absoluteX="68dp"
                tools:layout_editor_absoluteY="85dp" />

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/name"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="text"
                android:maxLength="30"
                tools:layout_editor_absoluteX="68dp"
                tools:layout_editor_absoluteY="85dp" />

            <EditText
                android:id="@+id/edt_surname1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:maxLength="30"
                android:hint="@string/surname"
                android:contentDescription="@string/surname"
                android:inputType="text"
                tools:layout_editor_absoluteX="68dp"
                tools:layout_editor_absoluteY="85dp" />

            <EditText
                android:id="@+id/edt_surname2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:maxLength="30"
                android:hint="@string/surname"
                android:contentDescription="@string/surname"
                android:inputType="text"
                tools:layout_editor_absoluteX="68dp"
                tools:layout_editor_absoluteY="85dp" />

            <TextView
                android:id="@+id/txt_birthday"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="2dp"
                android:text="@string/bday"
                android:contentDescription="@string/bday"
                tools:layout_editor_absoluteX="15dp"
                tools:layout_editor_absoluteY="16dp" />

            <EditText
                android:id="@+id/mostrar_fecha"
                android:layout_width="match_parent"
                android:focusable="false"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/formato_fecha"/>

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="e-Mail"
                android:maxLength="50"
                android:inputType="textEmailAddress"
                tools:layout_editor_absoluteX="68dp"
                tools:layout_editor_absoluteY="85dp" />

            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                android:maxLength="11"
                tools:layout_editor_absoluteX="68dp"
                tools:layout_editor_absoluteY="85dp" />

            <EditText
                android:id="@+id/edt_address"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/address"
                android:contentDescription="@string/address"
                android:inputType="text"
                android:maxLength="200"
                tools:layout_editor_absoluteX="68dp"
                tools:layout_editor_absoluteY="85dp" />

            <EditText
                android:id="@+id/edt_city"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:maxLength="50"
                android:hint="@string/city"
                android:contentDescription="@string/city"
                android:inputType="text"
                tools:layout_editor_absoluteX="68dp"
                tools:layout_editor_absoluteY="85dp" />

            <Button
                android:id="@+id/btn_register"
                android:background="@color/colorPrimary"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:text="@string/add"
                android:contentDescription="@string/add"/>

        </LinearLayout>
</ScrollView>
</RelativeLayout>
